@@ -66,6 +66,7 @@ DETAILED CHANGES:
 	- ADDED: Many Gui controls accept now nil for text.
 	- ADDED: Some raygui controls return 1 instead of 0 when pressed or scrolled.
 	- ADDED: DrawGridEx.
+	- ADDED: GetRayBoxCells.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
